tests/snapshots/examples_fixtures/base__base_shadowing_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_shadowing_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `Base` is not imported.

  examples/base/base_shadowing_ok.flx:9:9
  |
9 |   print(Base.len(xs))
  |         ^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Base`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.
== stdout ==
<not executed>
